k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-dashboard-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-dashboard
  template:
    metadata:
      labels:
        app: admin-dashboard
    spec:
      containers:
        - name: admin-dashboard
          image: admin-dashboard:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
