k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-dashboard-mysql
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-dashboard-mysql
  template:
    metadata:
      labels:
        app: admin-dashboard-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.1
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
