k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-dashboard-service
  namespace: default
spec:
  selector:
    app: admin-dashboard
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
  type: NodePort
