k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: default
spec:
  selector:
    app: admin-dashboard-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  type: ClusterIP
